--- a/prototype/CMakeLists.txt
+++ b/prototype/CMakeLists.txt
@@ -20,8 +20,8 @@ set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall")
 set(root_dir ${CMAKE_CURRENT_LIST_DIR})
 set(third_party_dir ${CMAKE_CURRENT_LIST_DIR}/third_party)
 
-if (WIN32)
 
+if (WIN32)
     # I hate windows...
     # set(Boost_DEBUG ON)
     set(BOOST_ROOT "C:\\Program Files\\boost_1_80_0")
@@ -32,15 +32,18 @@ if (WIN32)
     set(Boost_COMPILER "-vc143")
     set(Boost_LIB_PREFIX "lib")
 
-    set(CUDA_TOOLKIT_ROOT_DIR "C:/Program\ Files/NVIDIA\ GPU\ Computing\ Toolkit/")
-    set(CMAKE_CUDA_COMPILER "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.0\\bin\\nvcc")
+    set(CUDA_TOOLKIT_ROOT_DIR "C:/Program\ Files/NVIDIA\ GPU\ Computing\ Toolkit/CUDA/v12.0")
+    set(CMAKE_CUDA_COMPILER "${CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc")
 
     # bad practice; just hardcoding cuda versions on bruce's laptops. use `$ nvidia-smi` to find your
     # card number, look up the cards architecture, then compare on this site for sm / compute versions
     # https://arnon.dk/tag/gencode/
     set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_75,code=\"sm_75,compute_75\")
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_WIN32_WINNT=0x0A00")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_WIN32_WINNT=0x0A00 /D_WIN32")
+    set(CUDA_CUDART_LIBRARY "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/cudart.lib")
+    set(CUDART_LIB "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/cudart.lib")
+    set(CUDA_CUDA_LIBRARY "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/cuda.lib")
 else()
 
     set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_50,code=\"sm_50,compute_50\")
@@ -71,26 +74,43 @@ include_directories(${third_party_dir}/nlohmann)
 
 find_package(CUDA)
 if (CUDA_FOUND)
+    if(WIN32)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_CUDA_CODEC_")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CUDA_CODEC_")
+    endif()
     add_subdirectory(${third_party_dir}/NvidiaCodec)
+    include_directories(${CUDA_TOOLKIT_ROOT_DIR}/include)
+    include_directories(${third_party_dir}/NvidiaCodec)
 endif()
 
 
 set(source_library ${PROJECT_NAME})
 set(source_path ${CMAKE_CURRENT_SOURCE_DIR}/internal)
 set(udp_path ${source_path}/infrastructure/udp)
+set(codec_path ${source_path}/infrastructure/codec)
 set(
     internal_sources
     ${udp_path}/client.cpp
 )
+set(
+    internal_headers
+    ${codec_path}/packet.hpp
+    ${codec_path}/decoder.hpp
+)
+if(CUDA_FOUND)
+    set(internal_sources ${internal_sources} ${codec_path}/cuda_decoder.cpp)
+endif()
 
-add_library(${source_library} STATIC ${internal_sources})
+add_library(${source_library} STATIC ${internal_sources} ${internal_headers})
 target_include_directories(${PROJECT_NAME} PRIVATE ${source_path})
 if (MINGW)
     target_link_libraries(${PROJECT_NAME} ws2_32)
 endif()
+target_link_libraries(${PROJECT_NAME} ${CUDA_CUDA_LIBRARY})
 if (CUDA_FOUND)
     target_link_libraries(${PROJECT_NAME} ${NvidiaCodecLib})
-    target_include_directories(${PROJECT_NAME} PRIVATE ${third_party_dir}/NvidiaCodec)
+    target_link_libraries(${PROJECT_NAME} ${CUDA_CUDA_LIBRARY})
 endif()
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/cmd ${CMAKE_BINARY_DIR}/cmd)
