WHY ISN'T IT COMPILING MY NVIDIA CODEC

--- a/prototype/CMakeLists.txt
+++ b/prototype/CMakeLists.txt
@@ -6,6 +6,8 @@ project (
     LANGUAGES CXX
 )
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
     message(
         FATAL_ERROR
@@ -33,20 +35,23 @@ if (WIN32)
     set(Boost_LIB_PREFIX "lib")
 
     set(CUDA_TOOLKIT_ROOT_DIR "C:/Program\ Files/NVIDIA\ GPU\ Computing\ Toolkit/CUDA/v12.0")
-    set(CMAKE_CUDA_COMPILER "${CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc")
+    set(CMAKE_CUDA_COMPILER "${CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc.exe")
 
     # bad practice; just hardcoding cuda versions on bruce's laptops. use `$ nvidia-smi` to find your
     # card number, look up the cards architecture, then compare on this site for sm / compute versions
     # https://arnon.dk/tag/gencode/
     set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_75,code=\"sm_75,compute_75\")
+    set(CUDA_ARCHITECTURE_SETTING "75;75;75")
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_WIN32_WINNT=0x0A00 /D_WIN32")
     set(CUDA_CUDART_LIBRARY "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/cudart.lib")
     set(CUDART_LIB "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/cudart.lib")
     set(CUDA_CUDA_LIBRARY "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/cuda.lib")
+    set(CUDA_INCLUDE_DIR "${CUDA_TOOLKIT_ROOT_DIR}/include")
 else()
 
     set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_50,code=\"sm_50,compute_50\")
+    set(CUDA_ARCHITECTURE_SETTING "50;50;50")
 
     set(BOOST_ROOT "/usr/local/lib/boost_1_80_0")
     set(Boost_INCLUDE_DIR  "/usr/local/lib/boost_1_80_0")
@@ -66,7 +71,7 @@ link_libraries(
     sqlite3
 )
 if (!WIN32)
-    link_libraries(SQLiteCpp pthread dl)
+    link_libraries(pthread dl)
 endif()
 
 # nlohmann/json
@@ -80,7 +85,7 @@ if (CUDA_FOUND)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CUDA_CODEC_")
     endif()
     add_subdirectory(${third_party_dir}/NvidiaCodec)
-    include_directories(${CUDA_TOOLKIT_ROOT_DIR}/include)
+    include_directories(${CUDA_INCLUDE_DIR})
     include_directories(${third_party_dir}/NvidiaCodec)
 endif()
 
@@ -92,25 +97,22 @@ set(codec_path ${source_path}/infrastructure/codec)
 set(
     internal_sources
     ${udp_path}/client.cpp
+    ${codec_path}/decoder.cpp
 )
 set(
     internal_headers
-    ${codec_path}/packet.hpp
+    ${codec_path}/bsp_packet.hpp
+    ${codec_path}/codec.hpp
     ${codec_path}/decoder.hpp
 )
-if(CUDA_FOUND)
-    set(internal_sources ${internal_sources} ${codec_path}/cuda_decoder.cpp)
-endif()
 
 add_library(${source_library} STATIC ${internal_sources} ${internal_headers})
-target_include_directories(${PROJECT_NAME} PRIVATE ${source_path})
+target_include_directories(${PROJECT_NAME} PUBLIC ${source_path})
 if (MINGW)
-    target_link_libraries(${PROJECT_NAME} ws2_32)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ws2_32)
 endif()
-target_link_libraries(${PROJECT_NAME} ${CUDA_CUDA_LIBRARY})
 if (CUDA_FOUND)
-    target_link_libraries(${PROJECT_NAME} ${NvidiaCodecLib})
-    target_link_libraries(${PROJECT_NAME} ${CUDA_CUDA_LIBRARY})
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${NvidiaCodecLib} ${CUDA_CUDA_LIBRARY})
 endif()
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/cmd ${CMAKE_BINARY_DIR}/cmd)
