I think tomorrow I'm gunna clean up git / start working in branches / get camera done / get udp done (correctly)

--- a/prototype/CMakeLists.txt
+++ b/prototype/CMakeLists.txt
@@ -24,10 +24,12 @@ set(third_party_dir ${root_dir}/third_party)
 
 include(cmake/platform.cmake)
 include(cmake/codec.cmake)
+include(cmake/camera.cmake)
 
 include_directories(${root_dir}/include)
 include_directories(${internal_dir})
 add_subdirectory(${internal_dir}/infrastructure/codec)
+add_subdirectory(${internal_dir}/infrastructure/camera)
 
 
 add_subdirectory(${root_dir}/test)
