--- a/prototype/internal/infrastructure/codec/CMakeLists.txt
+++ b/prototype/internal/infrastructure/codec/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
 set(SOURCES codec.cpp)
+set(TARGET_LIBS)
 
 if (CUDA_AVAILABLE)
     set(SOURCES ${SOURCES} cuda/cuda_codec.cpp cuda/cuda_decoder.cpp cuda/cuda_encoder.cpp)
@@ -9,7 +10,10 @@ endif()
 
 if (V4L2_AVAILABLE)
     set(SOURCES ${SOURCES} v4l2/v4l2_encoder.cpp)
-    set(TARGET_LIBS pthread ${LIBCAMERA_LINK_LIBRARIES})
+endif()
+
+if (AN_PLATFORM STREQUAL RPI)
+    set(TARGET_LIBS ${TARGET_LIBS} pthread)
 endif()
 
 add_library(codec STATIC ${SOURCES})
