--- a/prototype/internal/infrastructure/codec/CMakeLists.txt
+++ b/prototype/internal/infrastructure/codec/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES codec.cpp)
 set(TARGET_LIBS)
 
 if (AN_PLATFORM STREQUAL RPI)
+    MESSAGE(RPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPIRPI)
     set(TARGET_LIBS ${TARGET_LIBS} pthread)
 endif()
 
