Tapping out; camera streamer is pretty much done, do need to test it; need sleep

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,5 +41,6 @@ include_directories(${root_dir}/internal)
 
 add_subdirectory(${internal_dir}/infrastructure/tcp)
 add_subdirectory(${internal_dir}/infrastructure/camera)
+add_subdirectory(${internal_dir}/service)
 
 add_subdirectory(test)
