Okay, buffer test one is rolling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(AN_PLATFORM "BROOSE_LINUX_LAPTOP" CACHE STRING "Sets up the build env")
 # pre-project cmake files
 include(cmake/platform.cmake)
 include(cmake/toolchain.cmake)
+include(cmake/features.cmake)
 
 project (
     AugmentedNormalcy
@@ -32,15 +33,30 @@ project (
 # post-project cmake files
 include(cmake/boost.cmake)
 include(cmake/camera.cmake)
+include(cmake/buffer.cmake)
 
 set(root_dir ${CMAKE_CURRENT_LIST_DIR})
 set(internal_dir ${root_dir}/internal)
 set(third_party_dir ${root_dir}/third_party)
 
+if (AN_PLATFORM_TYPE STREQUAL JETSON)
+    add_subdirectory(${third_party_dir}/jetson_multimedia_api)
+    include_directories(${third_party_dir}/jetson_multimedia_api/include)
+endif()
+
 include_directories(${root_dir}/internal)
 
 add_subdirectory(${internal_dir}/infrastructure/tcp)
-add_subdirectory(${internal_dir}/infrastructure/camera)
+if (FEATURE_CAMERA)
+    add_subdirectory(${internal_dir}/infrastructure/camera)
+endif()
+if (FEATURE_BUFFER)
+    add_subdirectory(${internal_dir}/infrastructure/buffer)
+endif()
 add_subdirectory(${internal_dir}/service)
 
 add_subdirectory(test)
+
+if (JETSON_BUFFER_AVAILABLE)
+    add_subdirectory(tmp)
+endif()
