--- a/prototype/scratch/glfw_test/weston.ini
+++ b/prototype/scratch/glfw_test/weston.ini
@@ -3,5 +3,9 @@ idle-time=0
 
 [shell]
 locking=false
-panel-location=""
+panel-position="none"
 
+[output]
+name=HDMI-A-1
+# mode=247.75 1440 1510 1542 1588 2560 2572 2574 2576 +HSync +VSync current
+mode=2160x1200@89.5, preferred current
