--- a/internal/service/CMakeLists.txt
+++ b/internal/service/CMakeLists.txt
@@ -1,14 +1,19 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.16)
 
-set(SOURCES camera_streamer.cpp)
-set(TARGET_LIBS)
+set(SOURCES)
+set(TARGET_LIBS pthread)
 
-if (
-    AN_PLATFORM STREQUAL RPI_CAMERA OR
-    AN_PLATFORM STREQUAL RPI_CAMERA_CC
-)
-    set(TARGET_LIBS ${TARGET_LIBS} pthread)
+if (FEATURE_CAMERA)
+    set(SOURCES ${SOURCES} camera_streamer.cpp)
+# for now, putting this here so non camera services don't get boned
+    add_library(service STATIC ${SOURCES})
+    target_link_libraries(service PRIVATE ${TARGET_LIBS} camera)
 endif()
 
-add_library(service STATIC ${SOURCES})
-target_link_libraries(service ${TARGET_LIBS})
+if (FEATURE_ENCODER)
+    set(SOURCES ${SOURCES} server_encoder.cpp)
+    include_directories(${BOOST_INCLUDEDIR})
+    # for now, putting this here so non camera services don't get boned
+    add_library(service STATIC ${SOURCES})
+    target_link_libraries(service PRIVATE ${TARGET_LIBS} encoder)
+endif()
