Make sure we pass all tests after refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,9 +52,8 @@ if (FEATURE_CAMERA)
 endif()
 if (FEATURE_ENCODER)
     add_subdirectory(${internal_dir}/infrastructure/encoder)
-    add_subdirectory(scratch/nv_jpeg_dma)
 endif()
-add_subdirectory(${internal_dir}/service)
+# add_subdirectory(${internal_dir}/service)
 
 add_subdirectory(test)
 
