--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,8 +26,11 @@ if (FEATURE_CAMERA)
 endif()
 
 if (FEATURE_ENCODER)
-    set(tests ${tests} test_infrastructure/test_encoder/test_jetson_encoder.cpp)
-    set(tests_link_libraries ${tests_link_libraries} encoder)
+    set(tests ${tests}
+            test_infrastructure/test_encoder/test_jetson_encoder.cpp
+            test_service/test_server_encoder.cpp
+    )
+    set(tests_link_libraries ${tests_link_libraries} encoder service)
 endif()
 
 add_definitions(-DTEST_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
