--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,6 +33,8 @@ if (FEATURE_ENCODER)
     set(tests_link_libraries ${tests_link_libraries} encoder service)
 endif()
 
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -D_GLIBCXX_DEBUG")
 add_definitions(-DTEST_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 add_executable(tests ${tests})
 
