--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ include_directories(${root_dir}/internal)
 add_subdirectory(${internal_dir}/infrastructure/tcp)
 if (FEATURE_CAMERA)
     add_subdirectory(${internal_dir}/infrastructure/camera)
+    add_subdirectory(${root_dir}/scratch/pi_encode)
 endif()
 if (FEATURE_ENCODER)
     add_subdirectory(${internal_dir}/infrastructure/encoder)
