--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ project (
 include(cmake/boost.cmake)
 include(cmake/camera.cmake)
 include(cmake/encoder.cmake)
+include(cmake/decoder.cmake)
 
 set(root_dir ${CMAKE_CURRENT_LIST_DIR})
 set(internal_dir ${root_dir}/internal)
@@ -49,13 +50,14 @@ include_directories(${root_dir}/internal)
 add_subdirectory(${internal_dir}/infrastructure/tcp)
 if (FEATURE_CAMERA)
     add_subdirectory(${internal_dir}/infrastructure/camera)
-    add_subdirectory(${root_dir}/scratch/pi_encode)
+    # add_subdirectory(${root_dir}/scratch/pi_encode)
 endif()
 if (FEATURE_ENCODER)
     add_subdirectory(${internal_dir}/infrastructure/encoder)
 endif()
 if (FEATURE_DECODER)
     add_subdirectory(${root_dir}/scratch/pi_decode)
+    add_subdirectory(${internal_dir}/infrastructure/decoder)
 endif()
 
 add_subdirectory(${internal_dir}/service)
