lets see if this runs

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,6 +33,12 @@ if (FEATURE_ENCODER)
     set(tests_link_libraries ${tests_link_libraries} encoder service)
 endif()
 
+if (FEATURE_DECODER)
+    set(tests ${tests}
+            test_infrastructure/test_decoder/test_v4l2_decoder.cpp
+    )
+    set(tests_link_libraries ${tests_link_libraries} decoder)
+endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -D_GLIBCXX_DEBUG")
 add_definitions(-DTEST_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
