--- a/scratch/pi_encode/CMakeLists.txt
+++ b/scratch/pi_encode/CMakeLists.txt
@@ -2,11 +2,11 @@
 
 cmake_minimum_required(VERSION 3.16)
 
-project(AugmentedNormalcy_BufferTest LANGUAGES CXX)
+project(AugmentedNormalcy_PiEncodeScratch LANGUAGES CXX)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -D_GLIBCXX_DEBUG -fsanitize=undefined -fno-omit-frame-pointer")
 
 add_definitions(-DTMP_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
-add_executable(buffer_test buffer_test.cpp)
+add_executable(pi_encode_scratch main.cpp)
 
-target_link_libraries(buffer_test jetson_mm pthread)
+target_link_libraries(pi_encode_scratch pthread)
