Need to finish fixing up tests; restarting my comp for some damn autocompletions

--- a/internal/infrastructure/camera/CMakeLists.txt
+++ b/internal/infrastructure/camera/CMakeLists.txt
@@ -1,19 +1,6 @@
 
-set(SOURCES camera.cpp fake_camera.cpp)
-set(TARGET_LIBS)
-
-if (
-    AN_PLATFORM STREQUAL RPI_CAMERA OR
-    AN_PLATFORM STREQUAL RPI_CAMERA_CC
-)
-    set(TARGET_LIBS ${TARGET_LIBS} pthread)
-endif()
-
-if (LIBCAMERA_AVAILABLE)
-    set(SOURCES ${SOURCES} libcamera_camera.cpp)
-    set(TARGET_LIBS ${TARGET_LIBS} ${LIBCAMERA_LINK_LIBRARIES})
-endif()
-
+set(SOURCES libcamera_camera.cpp)
+set(TARGET_LIBS pthread ${LIBCAMERA_LINK_LIBRARIES})
 
 add_library(camera STATIC ${SOURCES})
 target_link_libraries(camera PRIVATE ${TARGET_LIBS})
