--- a/internal/infrastructure/encoder/CMakeLists.txt
+++ b/internal/infrastructure/encoder/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 
-if (JETSON_ENCODER_AVAILABLE)
+if (V4L2_ENCODER_AVAILABLE)
 
-    set(SOURCES jetson_encoder.cpp)
-    set(TARGET_LIBS jetson_mm pthread)
+    set(SOURCES v4l2_encoder.cpp)
+    set(TARGET_LIBS pthread)
 
     add_library(encoder STATIC ${SOURCES})
     target_link_libraries(encoder PRIVATE ${TARGET_LIBS})
