Test with dma buf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,8 @@ endif()
 
 add_subdirectory(${internal_dir}/service)
 
+add_subdirectory(scratch/pi_encode_dma)
+
 add_subdirectory(test)
 
 add_subdirectory(application)
