Fixed broken tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,7 +30,8 @@ if (FEATURE_ENCODER)
     set(tests_link_libraries ${tests_link_libraries} encoder)
 endif()
 
-if (FEATURE_ENCODER AND AN_PLATFORM_TYPE STREQUAL RPI)
+# if (FEATURE_ENCODER AND AN_PLATFORM_TYPE STREQUAL RPI)
+if (FEATURE_ENCODER)
     set(tests ${tests}
             test_service/test_camera_streamer.cpp
     )
