Not sure what the segfault is

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,8 +30,7 @@ if (FEATURE_ENCODER)
     set(tests_link_libraries ${tests_link_libraries} encoder)
 endif()
 
-# if (FEATURE_ENCODER AND AN_PLATFORM_TYPE STREQUAL RPI)
-if (FEATURE_ENCODER)
+if (FEATURE_ENCODER AND AN_PLATFORM_TYPE STREQUAL RPI)
     set(tests ${tests}
             test_service/test_camera_streamer.cpp
     )
