--- a/internal/infrastructure/decoder/CMakeLists.txt
+++ b/internal/infrastructure/decoder/CMakeLists.txt
@@ -1,12 +1,11 @@
 
-if (V4L2_DECODER_AVAILABLE)
+find_library(JPEG_LIBRARY jpeg REQUIRED)
 
-    set(SOURCES v4l2_decoder.cpp)
-    set(TARGET_LIBS pthread)
+set(SOURCES sw_decoder.cpp)
+set(TARGET_LIBS pthread jpeg)
 
-    add_definitions(-DTHIS_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+add_definitions(-DTHIS_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 
-    add_library(decoder STATIC ${SOURCES})
-    target_link_libraries(decoder PRIVATE ${TARGET_LIBS})
+add_library(decoder STATIC ${SOURCES})
+target_link_libraries(decoder PRIVATE ${TARGET_LIBS})
 
-endif()
