--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,19 +22,13 @@ if (LIBCAMERA_AVAILABLE)
 endif()
 
 
-if (FEATURE_ENCODER)
-    set(tests ${tests}
-            test_infrastructure/test_encoder/fake_camera.cpp
-            test_infrastructure/test_encoder/test_sw_encoder.cpp
-    )
-    set(tests_link_libraries ${tests_link_libraries} encoder)
-endif()
-
 if (FEATURE_ENCODER AND AN_PLATFORM_TYPE STREQUAL RPI)
     set(tests ${tests}
             test_service/test_camera_streamer.cpp
+            test_infrastructure/test_encoder/fake_camera.cpp
+            test_infrastructure/test_encoder/test_sw_encoder.cpp
     )
-    set(tests_link_libraries ${tests_link_libraries} service)
+    set(tests_link_libraries ${tests_link_libraries} service encoder)
 endif()
 
 if (NOT AN_PLATFORM_TYPE STREQUAL RPI)
@@ -44,7 +38,7 @@ endif()
 
 if (FEATURE_DECODER AND AN_PLATFORM_TYPE STREQUAL RPI)
     set(tests ${tests}
-            test_infrastructure/test_decoder/test_v4l2_decoder.cpp
+            test_infrastructure/test_decoder/test_sw_decoder.cpp
     )
     set(tests_link_libraries ${tests_link_libraries} decoder)
 endif()
